Fixed an unwanted gap between dt and dd elements

--- a/styles/jorsek_pdf/modules/dita/definition_list.css
+++ b/styles/jorsek_pdf/modules/dita/definition_list.css
@@ -2,7 +2,7 @@
 dl {
   display: block;
   clear: both;
-  margin: 10px 0px 10px 0px;
+  margin: 10px 0px 0px 0px;
 }
 
 /* Add a border on the left of definition terms and definition descriptions. */
@@ -28,4 +28,15 @@ dd {
   margin: 0px;
   margin-bottom: 20px;
   margin-top: -2px; /* This ensures correct border transition. */
+}
+
+/* Ensure correct border transition. */
+.dd > pre.codeblock {
+  margin: 0px;
+  padding: 10px 0px 10px 0px;
+  }
+.dd > p,
+.dd> .p {
+    margin: 0px;
+    padding: 5px 0px 0px 0px;
 }
